<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center">
    <LinearLayout android:orientation="vertical"
        android:layout_width="200dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:textColor="@color/light_gray"
            android:textSize="22sp"
            android:padding="10dp"
            android:text="@string/update_progress"
            android:gravity="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/new_progress"
                android:gravity="center"
                android:textSize="16sp"/>
            <EditText
                android:id="@+id/new_pages"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/input"
                android:textSize="18sp" />
        </LinearLayout>
        <Button
            android:id="@+id/update_progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sure"
            android:textColor="#FFF"
            android:textSize="16sp"
            android:background="@drawable/add_button_style"
            android:layout_margin="10dp"/>


    </LinearLayout>
</ScrollView>