<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="@color/colorPrimary">
    <TextView
        android:clickable="true"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/exit"
        android:textSize="16sp"
        android:textColor="#FFF"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:paddingStart="5dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/title"
        android:textSize="20sp"
        android:textColor="#FFF"
        android:layout_centerInParent="true"
        android:gravity="center"/>
    <TextView
        android:clickable="true"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/add"
        android:textSize="16sp"
        android:textColor="#FFF"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:paddingEnd="5dp"/>
</RelativeLayout>