<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center">
    <LinearLayout android:orientation="vertical"
        android:layout_width="300dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:textColor="@color/light_gray"
            android:textSize="22sp"
            android:padding="10dp"
            android:text="@string/book_info"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/book_name"
                android:gravity="center"
                android:textSize="16sp"/>
            <EditText
                android:id="@+id/new_book_name"
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textSize="16sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/book_author"
                android:gravity="center"
                android:textSize="16sp"/>
            <EditText
                android:id="@+id/new_book_author"
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textSize="16sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/total_pages"
                android:gravity="center"
                android:maxLines="1"
                android:textSize="16sp"/>
            <EditText
                android:id="@+id/new_total_pages"
                android:layout_width="0dp"
                android:layout_weight="4"
                android:inputType="number"
                android:layout_height="wrap_content"
                android:textSize="16sp"/>
        </LinearLayout>
        <Button
            android:id="@+id/add_book"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:textColor="#FFF"
            android:textSize="18sp"
            android:background="@drawable/add_button_style"
            android:layout_margin="10dp"/>
    </LinearLayout>
</ScrollView>